@@ -1455,9 +1455,9 @@
 </td>
 <td class=cellinside>0.3.6
 </td>
-<td class=cellinside>2016-05-02
+<td class=cellinside>2016-07-10
 </td>
-<td class=cellinside>08:41:37
+<td class=cellinside>12:31:45
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -1529,11 +1529,11 @@
 </td>
 <td class=cellinside><br /> Function calls object specific plot functions for RLum S4 class objects.<br />
 </td>
-<td class=cellinside>0.4.2
+<td class=cellinside>0.4.3
 </td>
-<td class=cellinside>2016-05-02
+<td class=cellinside>2016-07-10
 </td>
-<td class=cellinside>08:36:06
+<td class=cellinside>12:47:13
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
