@@ -32,6 +32,8 @@
     \subsection{Changes in S4-classes and methods}{
       \itemize{
       \item Method \code{get_RLum} for \code{RLum.Analysis}-objects did not respect \code{.pid}, fixed.
+      \item \code{plot_RLum} was not passing the argument \code{sub}, as it was fetched by the partial
+      argument matching; fixed.
 
 
       }
